Fix openhim image

--- a/index.html
+++ b/index.html
@@ -567,7 +567,10 @@ Figure&nbsp;4: Overview of the default data stack of the OpenHIM Platform. The d
 <li>FAIR principles vs FHIR graph: is FHIR a FAIR Data Object</li>
 </ul></li>
 <li>Since we use FHIR, we don’t need a semantic layer because that is already provided</li>
-<li></li>
+<li>We do need different semantic layer, namely with metrics. Explain different types of semantics.
+<ul>
+<li>The metrics layer same function as CQL. Discuss CQL vs generic metrics layer.</li>
+</ul></li>
 </ul>
 </section>
 <section id="attribute-based-access-control" class="level3">
