--- a/index.html
+++ b/index.html
@@ -505,10 +505,34 @@ Figure&nbsp;4: Overview of the default data stack of the OpenHIM Platform. The d
 <li>When using the ELK stack, flattening is done at the end. Implementations of FHIRPath support Elasticsearch as an execution engine, also here</li>
 <li>Main limitations: both Clickhouse en Elasticsearch don’t follow decomposition of storage, compute and UI. Therefore, downward scaleability is limited.</li>
 </ul>
+<section id="level-of-opennness" class="level4">
+<h4 class="anchored" data-anchor-id="level-of-opennness">Level of opennness</h4>
+<p>TO DO: evaluate openness of OpenHIM platform</p>
+</section>
+<section id="core-maintenance-functions" class="level4">
+<h4 class="anchored" data-anchor-id="core-maintenance-functions">Core maintenance functions</h4>
+<p>TO DO: evaluate maintenance functions</p>
+</section>
+<section id="downward-scaleability" class="level4">
+<h4 class="anchored" data-anchor-id="downward-scaleability">Downward scaleability</h4>
+<p>TO DO: evaluate downward scalability</p>
+</section>
 </section>
 <section id="ona-canopy" class="level3">
 <h3 class="anchored" data-anchor-id="ona-canopy">ONA Canopy</h3>
 <p>TO DO: add section describing ONA Canopy.</p>
+<section id="level-of-opennness-1" class="level4">
+<h4 class="anchored" data-anchor-id="level-of-opennness-1">Level of opennness</h4>
+<p>TO DO: evaluate openness of OpenHIM platform</p>
+</section>
+<section id="core-maintenance-functions-1" class="level4">
+<h4 class="anchored" data-anchor-id="core-maintenance-functions-1">Core maintenance functions</h4>
+<p>TO DO: evaluate maintenance functions</p>
+</section>
+<section id="downward-scaleability-1" class="level4">
+<h4 class="anchored" data-anchor-id="downward-scaleability-1">Downward scaleability</h4>
+<p>TO DO: evaluate downward scalability</p>
+</section>
 </section>
 <section id="momcare-programme" class="level3">
 <h3 class="anchored" data-anchor-id="momcare-programme">Momcare programme</h3>
@@ -543,6 +567,18 @@ Figure&nbsp;4: Overview of the default data stack of the OpenHIM Platform. The d
 </ul></li>
 </ul>
 <p>TO DO: Add diagram</p>
+<section id="level-of-opennness-2" class="level4">
+<h4 class="anchored" data-anchor-id="level-of-opennness-2">Level of opennness</h4>
+<p>TO DO: evaluate openness of OpenHIM platform</p>
+</section>
+<section id="core-maintenance-functions-2" class="level4">
+<h4 class="anchored" data-anchor-id="core-maintenance-functions-2">Core maintenance functions</h4>
+<p>TO DO: evaluate maintenance functions</p>
+</section>
+<section id="downward-scaleability-2" class="level4">
+<h4 class="anchored" data-anchor-id="downward-scaleability-2">Downward scaleability</h4>
+<p>TO DO: evaluate downward scalability</p>
+</section>
 </section>
 </section>
 <section id="discussion" class="level2">
@@ -551,10 +587,10 @@ Figure&nbsp;4: Overview of the default data stack of the OpenHIM Platform. The d
 <h3 class="anchored" data-anchor-id="openness-of-data-platforms">Openness of data platforms</h3>
 <p>We specifically address the notion of openness of HDPs in LMICs in terms of the design-related questions put forward by de Reuver at al.11:</p>
 <ul>
-<li><p>Object of openness: what data-related resources should data platforms make available when opening up (e.g.&nbsp;data, data products, datadriven insights, analytics modules)? Which user groups derive value from accessing data-related resources from data platforms (e.g.&nbsp;data providers, data users, intermediaries, developers)?</p></li>
-<li><p>Unit of analysis: what is platform-to-platform openness in the context of data platforms, given the expectation that different HDPs will emerge at various aggregation levels? How do we distinguish meta-platforms, forking, and platform interoperability?</p></li>
-<li><p>Risk of openness: What are the novel (negative) implications of opening up data platforms? How can reflexivity in design help providers to resolve the negative implications of openness?</p></li>
-<li><p>Answers/insights to above:</p>
+<li>Object of openness: what data-related resources should data platforms make available when opening up (e.g.&nbsp;data, data products, datadriven insights, analytics modules)? Which user groups derive value from accessing data-related resources from data platforms (e.g.&nbsp;data providers, data users, intermediaries, developers)?</li>
+<li>Unit of analysis: what is platform-to-platform openness in the context of data platforms, given the expectation that different HDPs will emerge at various aggregation levels? How do we distinguish meta-platforms, forking, and platform interoperability?</li>
+<li>Risk of openness: What are the novel (negative) implications of opening up data platforms? How can reflexivity in design help providers to resolve the negative implications of openness?</li>
+<li>Answers/insights to above:
 <ul>
 <li>Openness of standardized view on FHIR data and cross-language serialization of relational algebra makes it possible to fully standardize the workflow from start to finish</li>
 <li>Platform-to-platform: MPC</li>
