--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Chris Ihure">
 <meta name="author" content="Antragama Abbas">
 <meta name="author" content="Steven Wanyee">
-<meta name="author" content="XXX">
+<meta name="author" content="Alessandro Pietrobon">
 <meta name="author" content="John Grimes">
 <meta name="author" content="Mark van der Graaf">
 <meta name="author" content="Mark de Reuver">
@@ -150,7 +150,7 @@ div.csl-indent {
           </p>
       </div>
     <div class="quarto-title-meta-contents">
-    <p class="author">XXX </p>
+    <p class="author">Alessandro Pietrobon </p>
   </div>
   <div class="quarto-title-meta-contents">
         <p class="affiliation">
