--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <meta name="author" content="Antragama Abbas">
 <meta name="author" content="Steven Wanyee">
 <meta name="author" content="Alessandro Pietrobon">
+<meta name="author" content="Ryan Chrichton">
 <meta name="author" content="John Grimes">
 <meta name="author" content="Mark van der Graaf">
+<meta name="author" content="Nicole Spieker">
 <meta name="author" content="Mark de Reuver">
 <meta name="keywords" content="Analytics-on-FHIR, SQL-on-FHIR, HIE, data platforms, LMICs, digital health">
 
@@ -158,6 +160,14 @@ div.csl-indent {
           </p>
       </div>
     <div class="quarto-title-meta-contents">
+    <p class="author">Ryan Chrichton </p>
+  </div>
+  <div class="quarto-title-meta-contents">
+        <p class="affiliation">
+            Jembi Health Systems
+          </p>
+      </div>
+    <div class="quarto-title-meta-contents">
     <p class="author">John Grimes </p>
   </div>
   <div class="quarto-title-meta-contents">
@@ -167,6 +177,14 @@ div.csl-indent {
       </div>
     <div class="quarto-title-meta-contents">
     <p class="author">Mark van der Graaf </p>
+  </div>
+  <div class="quarto-title-meta-contents">
+        <p class="affiliation">
+            PharmAccess Foundation
+          </p>
+      </div>
+    <div class="quarto-title-meta-contents">
+    <p class="author">Nicole Spieker </p>
   </div>
   <div class="quarto-title-meta-contents">
         <p class="affiliation">
